# bal_solver_sim_ceres

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ba_main.cpp  ba_pnp.cpp  ba_pnp_ceres.cpp  bound_adjustment_ceres.cpp  common.hpp  point_camera.h  show_3d_points.py
bal_solver_sim_ceres/: BoundleAdjustmentByNode_accelebrate.h  jet.h  point_camera.h
common/: CeresRotation.hpp  DataType.hpp  ReadDataset.hpp
